--- a/src/components/Tasbih.css
+++ b/src/components/Tasbih.css
@@ -3,9 +3,13 @@
     transform: scale(1.02);
     color: #d1e7dd;
 }
+.App {
+  text-align: center;
+}
 .container {
   max-width: 500px;
   margin-top: 1;
+  text-align: center;
   margin: 20px auto;
   background: #929292;
   border-radius: 15px;
@@ -13,8 +17,9 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 #clickable-div {
-    width: 50vh;
-    height: 30vh;
+    width: 30vh;
+    height: 20vh;
+    text-align: center;
     background-color: #F8F6F4;
     color: black;
     display: flex;
